--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,6 +19,7 @@ tab_bar_align right
 macos_menubar_title_max_length 0
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
+background_blur 64
 
 foreground               #e0def4
 background               #191724
@@ -72,7 +73,7 @@ color7   #e0def4
 color15  #e0def4
 
 confirm_os_window_close 0
-background_opacity 0.85
+background_opacity 0.55
 kitty_mod alt
 
 scrollback_pager nvim +"source /Users/justinpolis/.config/kitty/vi-mode.lua"
