--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
-font_family      OperatorMono Nerd Font Medium
-italic_font      Operator Mono Medium
-bold_font        Operator Mono Medium
-bold_italic_font Operator Mono Medium 
-font_size 15.0
+font_family      FiraCode Nerd Font Mono
+italic_font      FiraCode Nerd Font Mono
+bold_font        FiraCode Nerd Font Mono
+bold_italic_font FiraCode Nerd Font Mono
+font_size 18.0
 enable_audio_bell no
 resize_debounce_time 0.0
 repaint_delay 1
@@ -22,7 +22,7 @@ macos_show_window_title_in none
 background_blur 64
 
 foreground               #e0def4
-background               #191724
+background               #000000 
 selection_foreground     #e0def4
 selection_background     #403d52
 
@@ -32,11 +32,9 @@ cursor_text_color        #e0def4
 url_color                #c4a7e7
 
 active_tab_foreground    #e0def4
-active_tab_background    #26233a
+active_tab_background    #000000
 inactive_tab_foreground  #6e6a86
-inactive_tab_background  #191724
-active_border_color      #31748f
-inactive_border_color    #403d52
+inactive_tab_background  #000000
 active_tab_font_style   normal
 inactive_tab_font_style normal
 
@@ -73,10 +71,8 @@ color7   #e0def4
 color15  #e0def4
 
 confirm_os_window_close 0
-background_opacity 0.55
+background_opacity 0.60
 kitty_mod alt
-
-scrollback_pager nvim +"source /Users/justinpolis/.config/kitty/vi-mode.lua"
 
 map kitty_mod+s show_scrollback
 map kitty_mod+t new_tab
