--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -11,19 +11,22 @@ add_newline = false
 [directory]
 truncate_to_repo = false
 read_only = ''
+style = 'white'
 truncation_symbol = '…/'
 
 [git_branch]
 format = '[$symbol$branch]($style) '
 symbol = ''
-style = 'bold #c4a7e7'
+style = '#FFFFFFF'
 
 [cmd_duration]
 format = ''
 
 [character]
-success_symbol = '[❯](bold purple)'
-error_symbol = '[❯](bold purple)'
+success_symbol = '[❯](white)'
+error_symbol = '[❯](white)'
+vimcmd_symbol = '[❯](white)'
+vimcmd_visual_symbol = '[❯](white)'
 
 [package]
 disabled = true
@@ -35,4 +38,4 @@ style = 'bold red'
 [git_status]
 modified = "✘"
 format = '[$all_status$ahead_behind]($style) '
-style = 'bold red'
+style = 'white'
