--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,12 +17,12 @@ tab_bar_min_tabs 1
 tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
 tab_bar_align right
 macos_menubar_title_max_length 0
-hide_window_decorations titlebar-only
+hide_window_decorations yes
 macos_show_window_title_in none
-background_blur 64
+#background_blur 64
 
 foreground               #e0def4
-background               #000000 
+background               #171717 
 selection_foreground     #e0def4
 selection_background     #403d52
 
@@ -32,9 +32,9 @@ cursor_text_color        #e0def4
 url_color                #c4a7e7
 
 active_tab_foreground    #e0def4
-active_tab_background    #000000
+active_tab_background    #171717 
 inactive_tab_foreground  #6e6a86
-inactive_tab_background  #000000
+inactive_tab_background  #171717 
 active_tab_font_style   normal
 inactive_tab_font_style normal
 
@@ -71,7 +71,7 @@ color7   #e0def4
 color15  #e0def4
 
 confirm_os_window_close 0
-background_opacity 0.50
+#background_opacity 0.80
 kitty_mod alt
 
 map kitty_mod+s show_scrollback
