--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,7 +19,7 @@ tab_bar_align right
 macos_menubar_title_max_length 0
 hide_window_decorations yes
 macos_show_window_title_in none
-#background_blur 64
+background_blur 64
 
 foreground               #e0def4
 background               #171717 
@@ -71,7 +71,7 @@ color7   #e0def4
 color15  #e0def4
 
 confirm_os_window_close 0
-#background_opacity 0.80
+background_opacity 0.80
 kitty_mod alt
 
 map kitty_mod+s show_scrollback
