--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,28 +1,23 @@
-font_family      FiraCode Nerd Font Mono
-italic_font      FiraCode Nerd Font Mono
-bold_font        FiraCode Nerd Font Mono
-bold_italic_font FiraCode Nerd Font Mono
-font_size 20.0
+font_size 15.0
 enable_audio_bell no
 resize_debounce_time 0.0
 repaint_delay 1
-window_margin_width 1
 input_delay 1
 shell_integration fish
 allow_remote_control yes
 touch_scroll_multiplier 5.0
 mouse_hide_wait -0.1
 copy_on_select no
-tab_bar_min_tabs 1
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
+tab_bar_min_tabs 2
+tab_title_template "{fmt.fg.tab}{index}:{title}"
 tab_bar_align right
 macos_menubar_title_max_length 0
 hide_window_decorations yes
 macos_show_window_title_in none
-background_blur 64
+background_blur 80
 
 foreground               #e0def4
-background               #171717 
+background               #000000 
 selection_foreground     #e0def4
 selection_background     #403d52
 
@@ -32,9 +27,9 @@ cursor_text_color        #e0def4
 url_color                #c4a7e7
 
 active_tab_foreground    #e0def4
-active_tab_background    #171717 
+active_tab_background    #000000 
 inactive_tab_foreground  #6e6a86
-inactive_tab_background  #171717 
+inactive_tab_background  #000000 
 active_tab_font_style   normal
 inactive_tab_font_style normal
 
@@ -71,7 +66,7 @@ color7   #e0def4
 color15  #e0def4
 
 confirm_os_window_close 0
-background_opacity 0.80
+background_opacity 0.65
 kitty_mod alt
 
 map kitty_mod+s show_scrollback
@@ -89,3 +84,14 @@ map kitty_mod+7 goto_tab 7
 map kitty_mod+8 goto_tab 8
 map kitty_mod+9 goto_tab 9
 map f18 discard_event
+
+window_padding_width 4 0 1 4
+modify_font cell_height 130%
+tab_bar_margin_width 10
+tab_bar_style separator
+font_family      family='Fira Code' style=Medium
+bold_font        auto
+italic_font      family='Fira Code' style=Medium
+bold_italic_font auto
+scrollbar scrolled
+tab_separator '  '
