--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -69,6 +69,9 @@ confirm_os_window_close 0
 background_opacity 0.65
 kitty_mod alt
 
+allow_remote_control yes
+listen_on unix:/tmp/kitty
+
 map kitty_mod+s show_scrollback
 map kitty_mod+t new_tab
 map kitty_mod+c new_tab_with_cwd
@@ -89,9 +92,17 @@ window_padding_width 4 0 1 4
 modify_font cell_height 130%
 tab_bar_margin_width 10
 tab_bar_style separator
-font_family      family='Fira Code' style=Medium
-bold_font        auto
-italic_font      family='Fira Code' style=Medium
-bold_italic_font auto
+# font_family      family='Fira Code' style=Medium
+# bold_font        auto
+# italic_font      family='Fira Code' style=Medium
+# bold_italic_font auto
 scrollbar scrolled
 tab_separator '  '
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Fira Code"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
