--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,6 +15,13 @@ macos_menubar_title_max_length 0
 hide_window_decorations yes
 macos_show_window_title_in none
 background_blur 80
+macos_quit_when_last_window_closed yes
+
+map ctrl+1 send_text all \x1b[49;5u
+map ctrl+2 send_text all \x1b[50;5u
+map ctrl+3 send_text all \x1b[51;5u
+map ctrl+4 send_text all \x1b[52;5u
+map ctrl+5 send_text all \x1b[53;5u
 
 foreground               #e0def4
 background               #000000 
@@ -67,42 +74,20 @@ color15  #e0def4
 
 confirm_os_window_close 0
 background_opacity 0.65
-kitty_mod alt
+macos_option_as_alt yes
 
 allow_remote_control yes
 listen_on unix:/tmp/kitty
 
-map kitty_mod+s show_scrollback
-map kitty_mod+t new_tab
-map kitty_mod+c new_tab_with_cwd
-map kitty_mod+q close_tab
-
-map kitty_mod+1 goto_tab 1
-map kitty_mod+2 goto_tab 2
-map kitty_mod+3 goto_tab 3
-map kitty_mod+4 goto_tab 4
-map kitty_mod+5 goto_tab 5
-map kitty_mod+6 goto_tab 6
-map kitty_mod+7 goto_tab 7
-map kitty_mod+8 goto_tab 8
-map kitty_mod+9 goto_tab 9
-map f18 discard_event
-
-window_padding_width 4 0 1 4
-modify_font cell_height 130%
+window_padding_width 4 0 10 4
+modify_font cell_height 150%
 tab_bar_margin_width 10
 tab_bar_style separator
-# font_family      family='Fira Code' style=Medium
-# bold_font        auto
-# italic_font      family='Fira Code' style=Medium
-# bold_italic_font auto
 scrollbar scrolled
 tab_separator '  '
 
 
-# BEGIN_KITTY_FONTS
 font_family      family="Fira Code"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-# END_KITTY_FONTS
