--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -1,4 +1,4 @@
 [[manager.prepend_keymap]]
 on   = [ "<Space>" ]
-run  = 'shell "qlmanage -p \"$@\" > /dev/null 2>&1" --block --confirm'
+run  = 'shell "qlmanage -p \"$@\" > /dev/null 2>&1" --orphan'
 desc = "Quick Look"
