--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,6 +20,8 @@ bind s command-prompt -p "New Session Name:" "new-session -s '%%'"
 setw -g mode-keys vi
 bind-key x kill-pane 
 set -g detach-on-destroy off 
+set -g popup-border-style "fg=#4F5258"
+
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-features ",*:RGB"
